--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "static-site",
+  "name": "node-readme-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "README generator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Bryan Pero",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.0.0",
     "inquirer": "^6.3.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zosotherover/node-README-generator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zosotherover/node-README-generator/issues"
+  },
+  "homepage": "https://github.com/zosotherover/node-README-generator#readme"
 }
